<?xml version="1.0" encoding="utf-8"?>
<!-- asockettester/res/menu/menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuplus"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_plus_tit">
    </item>
    <item
        android:id="@+id/menuminus"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_minus_tit">
    </item>
    <item
        android:id="@+id/menuconfig"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_config_tit">
    </item>
    <item
        android:id="@+id/menuabout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about_tit">
    </item>

</menu>